--- a/wp-content/themes/sage/package.json
+++ b/wp-content/themes/sage/package.json
@@ -21,5 +21,8 @@
     "laravel-vite-plugin": "^2.0.0",
     "tailwindcss": "^4.0.0",
     "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0"
   }
 }
