--- a/wp-content/themes/sage/package.json
+++ b/wp-content/themes/sage/package.json
@@ -23,6 +23,8 @@
     "vite": "^7.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.1.0"
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "jquery": "^3.7.1",
+    "sweetalert2": "^11.26.3"
   }
 }
